[gd_scene load_steps=2 format=3 uid="uid://vj51vfvxtd4q"]

[ext_resource type="Script" path="res://scenes/levels/title/title.gd" id="1_18qxa"]

[node name="TitleScene" type="Node"]
script = ExtResource("1_18qxa")

[node name="TitleScreen" type="Control" parent="."]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="Label" type="Label" parent="TitleScreen"]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -36.5
offset_top = -13.0
offset_right = 36.5
offset_bottom = 13.0
grow_horizontal = 2
grow_vertical = 2
text = "Defender"

[node name="HighScoresScreen" type="Control" parent="."]
visible = false
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="Label" type="Label" parent="HighScoresScreen"]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -36.5
offset_top = -13.0
offset_right = 36.5
offset_bottom = 13.0
grow_horizontal = 2
grow_vertical = 2
text = "High Scores"

[node name="EnemiesScreen" type="Control" parent="."]
visible = false
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="Label" type="Label" parent="EnemiesScreen"]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -36.5
offset_top = -13.0
offset_right = 36.5
offset_bottom = 13.0
grow_horizontal = 2
grow_vertical = 2
text = "Enemies"

[node name="SwitchScreenTimer" type="Timer" parent="."]
wait_time = 5.0
autostart = true

[connection signal="timeout" from="SwitchScreenTimer" to="." method="_on_switch_screen_timer_timeout"]
